# RefreshTest

./: CMakeLists.txt  color_phase.frag  color_phase.frag.refresh  hexagon_grid.frag  hexagon_grid.frag.refresh  hexagon_grid.spv  main.c  passthrough.vert  passthrough.vert.refresh  raymarch.frag  raymarch_frag.spirv  seascape.frag  seascape.frag.refresh
